; ModuleID = '/home/carl/AnghaBench/os-tutorial/18-interrupts/drivers/extr_screen.c_kprint_at.c'
source_filename = "/home/carl/AnghaBench/os-tutorial/18-interrupts/drivers/extr_screen.c_kprint_at.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@WHITE_ON_BLACK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @kprint_at(i8* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %9 = load i32, i32* %5, align 4
  %10 = icmp sge i32 %9, 0
  br i1 %10, label %11, label %18

11:                                               ; preds = %3
  %12 = load i32, i32* %6, align 4
  %13 = icmp sge i32 %12, 0
  br i1 %13, label %14, label %18

14:                                               ; preds = %11
  %15 = load i32, i32* %5, align 4
  %16 = load i32, i32* %6, align 4
  %17 = call i32 @get_offset(i32 %15, i32 %16)
  store i32 %17, i32* %7, align 4
  br label %24

18:                                               ; preds = %11, %3
  %19 = call i32 (...) @get_cursor_offset()
  store i32 %19, i32* %7, align 4
  %20 = load i32, i32* %7, align 4
  %21 = call i32 @get_offset_row(i32 %20)
  store i32 %21, i32* %6, align 4
  %22 = load i32, i32* %7, align 4
  %23 = call i32 @get_offset_col(i32 %22)
  store i32 %23, i32* %5, align 4
  br label %24

24:                                               ; preds = %18, %14
  store i32 0, i32* %8, align 4
  br label %25

25:                                               ; preds = %33, %24
  %26 = load i8*, i8** %4, align 8
  %27 = load i32, i32* %8, align 4
  %28 = sext i32 %27 to i64
  %29 = getelementptr inbounds i8, i8* %26, i64 %28
  %30 = load i8, i8* %29, align 1
  %31 = sext i8 %30 to i32
  %32 = icmp ne i32 %31, 0
  br i1 %32, label %33, label %48

33:                                               ; preds = %25
  %34 = load i8*, i8** %4, align 8
  %35 = load i32, i32* %8, align 4
  %36 = add nsw i32 %35, 1
  store i32 %36, i32* %8, align 4
  %37 = sext i32 %35 to i64
  %38 = getelementptr inbounds i8, i8* %34, i64 %37
  %39 = load i8, i8* %38, align 1
  %40 = load i32, i32* %5, align 4
  %41 = load i32, i32* %6, align 4
  %42 = load i32, i32* @WHITE_ON_BLACK, align 4
  %43 = call i32 @print_char(i8 signext %39, i32 %40, i32 %41, i32 %42)
  store i32 %43, i32* %7, align 4
  %44 = load i32, i32* %7, align 4
  %45 = call i32 @get_offset_row(i32 %44)
  store i32 %45, i32* %6, align 4
  %46 = load i32, i32* %7, align 4
  %47 = call i32 @get_offset_col(i32 %46)
  store i32 %47, i32* %5, align 4
  br label %25

48:                                               ; preds = %25
  ret void
}

declare dso_local i32 @get_offset(i32, i32) #1

declare dso_local i32 @get_cursor_offset(...) #1

declare dso_local i32 @get_offset_row(i32) #1

declare dso_local i32 @get_offset_col(i32) #1

declare dso_local i32 @print_char(i8 signext, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
